--- a/package.json
+++ b/package.json
@@ -7,9 +7,16 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
+  },"scripts": {
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "analyze": "set ANALYZE=true && next build --webpack",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@next/bundle-analyzer": "^16.0.7",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-separator": "^1.1.8",
@@ -27,6 +34,7 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-hook-form": "^7.68.0",
+    "react-window": "^2.2.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "three": "^0.181.2",
