--- a/package.json
+++ b/package.json
@@ -3,11 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
-  },"scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "analyze": "set ANALYZE=true && next build --webpack",
@@ -18,6 +13,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@next/bundle-analyzer": "^16.0.7",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
